# Banco-de-Proyectos-OPE

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: ESTRUCTURA.md  ManualRoles.md  ModuloCuentasCobro.md  ModuloProyectos.md  RestriccionRoles.md
proyectos/contenido/: admin.py  models.py
proyectos/contenido/migrations/: 0001_initial.py  0002_roles_groups.py
proyectos/cuentas/: apps.py  context_processors.py  decorators.py  forms.py  mixins.py  roles.py  urls.py  views.py
proyectos/cuentas_de_cobro/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  roles.py  selectors.py  services.py  urls.py  views.py
proyectos/cuentas_de_cobro/migrations/: 0001_initial.py  0002_cuentaentrega_fecha_cierre_and_more.py  0003_roles_cuentas_cobro.py  0004_alter_documentocierre_usuario_tramitefinal.py  0005_roles_radicacion_secop.py  0006_remove_documentocierre_documento_cierre_unico_por_tipo_and_more.py
proyectos/cuentas_de_cobro/templatetags/: cuentas_cobro_extras.py
proyectos/cuentas_de_cobro/tests/: test_services.py  test_views.py
proyectos/proyectos/: settings.py  urls.py
proyectos/static/web/: app.css
proyectos/templates/: 403.html  base.html  base_app.html
proyectos/templates/components/: estado_bar.html  form_field.html  lista_actividades.html  nav_item.html  paginacion.html
proyectos/templates/cuentas/: login.html  perfil.html
proyectos/templates/cuentas_cobro/: _flecha.html  _flujograma.html  (+4 more)
proyectos/web/: apps.py  context_processors.py  forms.py  metrics.py  selectors.py  services.py  urls.py  views.py
(+21 files in other folders)
