[project]
name = "banproe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "dj-database-url>=3.1.2",
    "django==5.2",
    "django-import-export>=4.4.1",
    "django-storages>=1.14.6",
    "django-unfold>=0.97.0",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "whitenoise>=6.12.0",
]
